--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "service_port": "8080",
-    "redis_host": "redis",
+    "redis_host": "localhost",
     "redis_port": "6379",
     "max_iddle_connections": 100,
     "ifa_counter_ttl": 600,
